--- a/persistent-volumes/create-persistent-volume.yaml
+++ b/persistent-volumes/create-persistent-volume.yaml
@@ -11,7 +11,7 @@ spec:
   local:
     path: /opt/kafka
   claimRef:
-    namespace: monitoring
+    namespace: observability
     name: data-bitnami-zookeeper-0
   nodeAffinity:
     required:
@@ -20,7 +20,7 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - observability-vm-1
+          - observability1
 
 ---
 apiVersion: v1
@@ -36,7 +36,7 @@ spec:
   local:
     path: /opt/kafka
   claimRef:
-    namespace: monitoring
+    namespace: observability
     name: data-bitnami-kafka-0
   nodeAffinity:
     required:
@@ -45,7 +45,7 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - observability-vm-1
+          - observability1
 
 ---
 apiVersion: v1
@@ -61,7 +61,7 @@ spec:
   local:
     path: /opt/prometheus
   claimRef:
-    namespace: monitoring
+    namespace: observability
     name: prometheus-server
   nodeAffinity:
     required:
@@ -70,7 +70,7 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - observability-vm-1
+          - observability1
 
 ---
 apiVersion: v1
@@ -86,7 +86,7 @@ spec:
   local:
     path: /opt/elasticsearch
   claimRef:
-    namespace: monitoring
+    namespace: observability
     name: es-master-es-master-0
   nodeAffinity:
     required:
@@ -95,7 +95,7 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - observability-vm-1
+          - observability1
 
 ---
 apiVersion: v1
@@ -111,7 +111,7 @@ spec:
   local:
     path: /opt/loki
   claimRef:
-    namespace: monitoring
+    namespace: observability
     name: storage-loki-0
   nodeAffinity:
     required:
@@ -120,7 +120,7 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - observability-vm-1
+          - observability1
 
 ---
 apiVersion: v1
@@ -136,7 +136,7 @@ spec:
   local:
     path: /opt/grafana
   claimRef:
-    namespace: monitoring
+    namespace: observability
     name: grafana
   nodeAffinity:
     required:
@@ -145,4 +145,4 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - observability-vm-1
+          - observability1
