--- a/tools-helm-configs/elasticsearch-values.yaml
+++ b/tools-helm-configs/elasticsearch-values.yaml
@@ -244,7 +244,7 @@ schedulerName: ""
 
 imagePullSecrets: []
 nodeSelector:
-  kubernetes.io/hostname: observability-vm-1
+  kubernetes.io/hostname: observability1
 tolerations: []
 
 # Enabling this will publicly expose your Elasticsearch instance.
