--- a/tools-helm-configs/otel-configmap.yaml
+++ b/tools-helm-configs/otel-configmap.yaml
@@ -12,7 +12,7 @@ data:
        endpoint: 0.0.0.0:9411
    exporters:
      otlp:
-       endpoint: tempo.monitoring.svc.cluster.local:55680
+       endpoint: tempo.observability.svc.cluster.local:55680
        insecure: true
    service:
      pipelines:
