--- a/tools-helm-configs/loki-values.yaml
+++ b/tools-helm-configs/loki-values.yaml
@@ -133,7 +133,7 @@ client: {}
 
 ## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/
 nodeSelector:
-  kubernetes.io/hostname: observability-vm-1
+  kubernetes.io/hostname: observability1
 
 ## ref: https://kubernetes.io/docs/concepts/storage/persistent-volumes/
 ## If you set enabled as "True", you need :
