--- a/tools-helm-configs/promtail-values.yaml
+++ b/tools-helm-configs/promtail-values.yaml
@@ -173,6 +173,9 @@ serviceMonitor:
   interval: null
   # -- ServiceMonitor scrape timeout in Go duration format (e.g. 15s)
   scrapeTimeout: null
+  # -- ServiceMonitor relabel configs to apply to samples before scraping
+  # https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/api.md#relabelconfig
+  relabelings: []
 
 # -- Configure additional ports and services. For each configured port, a corresponding service is created.
 # See values.yaml for details
@@ -232,7 +235,7 @@ config:
   # -- The Loki address to post logs to.
   # Must be reference in `config.file` to configure `client.url`.
   # See default config in `values.yaml`
-  lokiAddress: http://loki-0.loki-headless.monitoring.svc.cluster.local:3100/loki/api/v1/push
+  lokiAddress: http://loki-0.loki-headless.observability.svc.cluster.local:3100/loki/api/v1/push
   # -- A section of reusable snippets that can be reference in `config.file`.
   # Custom snippets may be added in order to reduce redundancy.
   # This is especially helpful when multiple `kubernetes_sd_configs` are use which usually have large parts in common.
@@ -287,7 +290,7 @@ config:
 
     # -- You can put here any keys that will be directly added to the config file's 'client' block.
     # @default -- empty
-    extraClientConfigs: ""
+    extraClientConfigs: []
 
     # -- You can put here any additional scrape configs you want to add to the config file.
     # @default -- empty
@@ -341,9 +344,11 @@ config:
       log_level: {{ .Values.config.logLevel }}
       http_listen_port: {{ .Values.config.serverPort }}
 
-    client:
-      url: {{ tpl .Values.config.lokiAddress . }}
-      {{- tpl .Values.config.snippets.extraClientConfigs . | nindent 2 }}
+    clients:
+      - url: {{ tpl .Values.config.lokiAddress . }}
+      {{- with .Values.config.snippets.extraClientConfigs }}
+      {{- toYaml . | nindent 2 }}
+      {{- end }}
 
     positions:
       filename: /run/promtail/positions.yaml
@@ -370,3 +375,15 @@ networkPolicy:
     port: 8443
     # -- Specifies specific network CIDRs you want to limit access to
     cidrs: []
+
+# -- Extra K8s manifests to deploy
+extraObjects: []
+  # - apiVersion: "kubernetes-client.io/v1"
+  #   kind: ExternalSecret
+  #   metadata:
+  #     name: promtail-secrets
+  #   spec:
+  #     backendType: gcpSecretsManager
+  #     data:
+  #       - key: promtail-oauth2-creds
+  #         name: client_secret
