--- a/kubernetes/kubernetes-dashboard/serviceaccount.yml
+++ b/kubernetes/kubernetes-dashboard/serviceaccount.yml
@@ -3,3 +3,13 @@ kind: ServiceAccount
 metadata:
   name: admin-user
   namespace: kubernetes-dashboard
+
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: admin-user-secret
+  namespace: kubernetes-dashboard
+  annotations:
+    kubernetes.io/service-account.name: admin-user
+type: kubernetes.io/service-account-token
