Create a service to expose metrics from Telegraf to Prometheus.

--- a/tools/telegraf/telegraf-serviceaccount.yaml
+++ b/tools/telegraf/telegraf-serviceaccount.yaml
@@ -68,3 +68,21 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: k8s:telegraf
+
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: telegraf-exporter
+  namespace: measurement
+  annotations:
+      prometheus.io/scrape: 'true'
+      prometheus.io/port:   '9126'
+spec:
+  selector:
+      name: telegraf
+  ports:
+  - name: telegraf-exporter
+    protocol: TCP
+    port: 9126
+    targetPort: 9126
