Add rules for restarting deployment.

--- a/tools/telegraf/telegraf-serviceaccount.yaml
+++ b/tools/telegraf/telegraf-serviceaccount.yaml
@@ -31,6 +31,12 @@ rules:
   - apiGroups: ["metrics.k8s.io"]
     resources: ["pods"]
     verbs: ["get", "list", "watch"]
+  - apiGroups: [ "" ]
+    resources: [ "pods", "services", "configmaps", "deployments", "nodes" ]
+    verbs: [ "create", "get", "update", "patch", "list", "delete", "watch" ]
+  - apiGroups: [ "apps", "extensions" ]
+    resources: [ "deployments" ]
+    verbs: [ "get", "patch", "delete" ]
   - apiGroups: [""]
     resources: ["nodes/proxy", "nodes/stats"]
     verbs: ["get", "list", "watch"]
