--- a/tools/telegraf/telegraf-ds-master.yaml
+++ b/tools/telegraf/telegraf-ds-master.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: telegraf
+  name: telegraf-master
   namespace: measurement
   labels:
     k8s-app: telegraf
@@ -135,4 +135,4 @@ spec:
           path: /var/run/utmp
       - name: config
         configMap:
-          name: telegraf
+          name: telegraf-master
