--- a/tools/telegraf/telegraf-ds-worker.yaml
+++ b/tools/telegraf/telegraf-ds-worker.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: telegraf
+  name: telegraf-worker
   namespace: measurement
   labels:
     k8s-app: telegraf
@@ -187,4 +187,4 @@ spec:
             path: /var/run/utmp
         - name: config
           configMap:
-            name: telegraf
+            name: telegraf-worker
