Add node selector.

--- a/kubernetes/kubernetes-dashboard/kubernetes-dashboard.yml
+++ b/kubernetes/kubernetes-dashboard/kubernetes-dashboard.yml
@@ -234,6 +234,7 @@ spec:
           emptyDir: {}
       serviceAccountName: kubernetes-dashboard
       nodeSelector:
+        "kubernetes.io/hostname": worker1
         "kubernetes.io/os": linux
       # Comment the following tolerations if Dashboard must not be deployed on master
       tolerations:
@@ -302,6 +303,7 @@ spec:
             runAsGroup: 2001
       serviceAccountName: kubernetes-dashboard
       nodeSelector:
+        "kubernetes.io/hostname": worker1
         "kubernetes.io/os": linux
       # Comment the following tolerations if Dashboard must not be deployed on master
       tolerations:
