--- a/tools/telegraf/telegraf-ds-master.yaml
+++ b/tools/telegraf/telegraf-ds-master.yaml
@@ -47,10 +47,12 @@ data:
      interfaces= ["eth*", "ens*"]
      ignore_protocol_stats= true
    [[inputs.system]]
+   [[inputs.temp]]
+   [[inputs.intel_powerstat]]
    [[inputs.kube_inventory]]
      url = "https://$HOSTIP:6443"
      bearer_token_string = "$TELEGRAF_TOKEN"
-     resource_include = [ "deployments", "daemonsets", "services", "statefulsets", "ingress" ]
+     resource_include = [ "pods", "deployments", "daemonsets", "services", "statefulsets" ]
      namespace = ""
      insecure_skip_verify = true
 
