Refactor code structure and file organization.

--- a/demo-apps/observability-app/flask/Dockerfile
+++ b/demo-apps/observability-app/flask/Dockerfile
@@ -1,24 +1,23 @@
 FROM python:3.8-slim
 
-ENV SENSORS="1"
-
-ARG Pathdir="/app"
-
-RUN apt -y update && apt -y install stress curl
-RUN mkdir $Pathdir
-
 #ENV FLASK_APP=app.py
 ENV FLASK_ENV=development
 ENV FLASK_DEBUG=0
 
-COPY requirements.txt .
-COPY app.py $Pathdir
+ARG Pathdir="/app"
 
+RUN apt -y update && apt -y install --no-install-recommends stress curl vim
+RUN mkdir $Pathdir
+
+COPY requirements.txt .
 #RUN apk update && apk add build-essential
 #RUN /usr/local/bin/python3 -m pip install --upgrade pip
 RUN pip3 install -r requirements.txt
 #RUN opentelemetry-bootstrap --action=install
-RUN /usr/local/bin/python -m pip install --upgrade pip
+#RUN /usr/local/bin/python -m pip install --upgrade pip
+
+COPY app.py $Pathdir
+
 
 WORKDIR $Pathdir
 
