--- a/tools-helm-configs/otel-collector.yaml
+++ b/tools-helm-configs/otel-collector.yaml
@@ -1,34 +1,93 @@
+# Copyright The OpenTelemetry Authors
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: otel-collector-conf
+  namespace: observability
+  labels:
+    app: opentelemetry
+    component: otel-collector-conf
+data:
+  otel-collector-config: |
+    receivers:
+      # Make sure to add the otlp receiver.
+      # This will open up the receiver on port 4317
+      zipkin:
+        endpoint: 0.0.0.0:9411
+
+      otlp:
+        protocols:
+          grpc:
+            endpoint: "0.0.0.0:4317"
+    processors:
+    extensions:
+      health_check: {}
+    exporters:
+      otlp:
+        endpoint: tempo.observability.svc.cluster.local:55680
+        insecure: true
+          #jaeger:
+        #endpoint: "jaeger-collector.observability.svc.cluster.local:14250"
+          #insecure: true
+          #prometheus:
+        #endpoint: 0.0.0.0:8889
+          #namespace: "testapp"
+      logging:
+
+    service:
+      extensions: [health_check]
+      pipelines:
+        traces:
+          receivers: [zipkin]
+          processors: []
+          exporters: [otlp]
+
+            #metrics:
+          #receivers: [otlp]
+            #processors: []
+            #exporters: [prometheus, logging]
+---
 apiVersion: v1
 kind: Service
 metadata:
   name: otel-collector
+  namespace: observability
   labels:
     app: opentelemetry
     component: otel-collector
 spec:
   ports:
-  - name: otlp # Default endpoint for OpenTelemetry receiver.
-    port: 55680
-    protocol: TCP
-    targetPort: 55680
-  - name: jaeger-grpc # Default endpoint for Jaeger gRPC receiver
-    port: 14250
-  - name: jaeger-thrift-http # Default endpoint for Jaeger HTTP receiver.
-    port: 14268
-  - name: zipkin # Default endpoint for Zipkin receiver.
-    port: 9411
-  - name: metrics # Default endpoint for querying metrics.
-    port: 8888
-  - name: prometheus # prometheus exporter
-    port: 8889
-
+    - name: otlp # Default endpoint for otlp receiver.
+      port: 4317
+      protocol: TCP
+      targetPort: 4317
+      nodePort: 30080
+    - name: metrics # Default endpoint for metrics.
+      port: 8889
+      protocol: TCP
+      targetPort: 8889
   selector:
     component: otel-collector
+  type: NodePort
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: otel-collector
+  namespace: observability
   labels:
     app: opentelemetry
     component: otel-collector
@@ -37,45 +96,55 @@ spec:
     matchLabels:
       app: opentelemetry
       component: otel-collector
+  minReadySeconds: 5
+  progressDeadlineSeconds: 120
+  replicas: 1 #TODO - adjust this to your own requirements
   template:
     metadata:
+      annotations:
+        prometheus.io/path: "/metrics"
+        prometheus.io/port: "8889"
+        prometheus.io/scrape: "true"
       labels:
         app: opentelemetry
         component: otel-collector
     spec:
       containers:
-      - command:
-          - "/otelcontribcol"
-          - "--config=/conf/otel-collector-config.yaml"
-#           Memory Ballast size should be max 1/3 to 1/2 of memory.
-          - "--mem-ballast-size-mib=683"
-          - "--log-level=DEBUG"
-        image: otel/opentelemetry-collector-contrib:0.29.0
-        name: otel-collector
-        ports:
-        - containerPort: 55679 # Default endpoint for ZPages.
-        - containerPort: 55680 # Default endpoint for OpenTelemetry receiver.
-        - containerPort: 14250 # Default endpoint for Jaeger HTTP receiver.
-        - containerPort: 14268 # Default endpoint for Jaeger HTTP receiver.
-        - containerPort: 9411 # Default endpoint for Zipkin receiver.
-        - containerPort: 8888  # Default endpoint for querying metrics.
-        - containerPort: 8889  # prometheus exporter
-        volumeMounts:
-        - name: otel-collector-config-vol
-          mountPath: /conf
-        # livenessProbe:
-        #   httpGet:
-        #     path: /
-        #     port: 13133 # Health Check extension default port.
-        # readinessProbe:
-        #   httpGet:
-        #     path: /
-        #     port: 13133 # Health Check extension default port.
-
-
+        - command:
+            - "/otelcol"
+            - "--config=/conf/otel-collector-config.yaml"
+            # Memory Ballast size should be max 1/3 to 1/2 of memory.
+            - "--mem-ballast-size-mib=683"
+          env:
+            - name: GOGC
+              value: "80"
+          image: otel/opentelemetry-collector:0.6.0
+          name: otel-collector
+          resources:
+            limits:
+              cpu: 1
+              memory: 2Gi
+            requests:
+              cpu: 200m
+              memory: 400Mi
+          ports:
+            - containerPort: 4317 # Default endpoint for otlp receiver.
+            - containerPort: 8889 # Default endpoint for querying metrics.
+          volumeMounts:
+            - name: otel-collector-config-vol
+              mountPath: /conf
+          # - name: otel-collector-secrets
+          #   mountPath: /secrets
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 13133 # Health Check extension default port.
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 13133 # Health Check extension default port.
       nodeSelector:
         kubernetes.io/hostname: observability1
-
       volumes:
         - configMap:
             name: otel-collector-conf
@@ -83,3 +152,10 @@ spec:
               - key: otel-collector-config
                 path: otel-collector-config.yaml
           name: otel-collector-config-vol
+#        - secret:
+#            name: otel-collector-secrets
+#            items:
+#              - key: cert.pem
+#                path: cert.pem
+#              - key: key.pem
+#                path: key.pem
