--- a/demo-apps/observability-app/cassandra/pod.yaml
+++ b/demo-apps/observability-app/cassandra/pod.yaml
@@ -6,20 +6,21 @@ spec:
   containers:
     - name: demo-cassandra-app
       image: usman476/demo-cassandra-app:latest
-      #command: [ "python3" ]
-      #args: [ "app.py" ]
-      command: [ "sleep" ]
-      args: [ "1800" ]
+      command: [ "python3" ]
+      args: [ "app.py" ]
+      #command: [ "sleep" ]
+      #args: [ "1800" ]
       #command: [ "opentelemetry-instrument" ]
       #args: [ "--traces_exporter", "jaeger_thrift", "flask", "run" ]
       resources:
         requests:
-          memory: "128Mi"
-          cpu: "100m"
-        limits:
           memory: "256Mi"
-          cpu: "200m"
+          cpu: "250m"
+        limits:
+          memory: "512Mi"
+          cpu: "500m"
       imagePullPolicy: "Always"
       #command: ["/bin/bash", "-ec", "while :; do echo '.'; sleep 5 ; done"]
   restartPolicy: Never
-  nodeName: worker1
+  nodeSelector:
+    kubernetes.io/hostname: worker1
