--- a/demo-apps/observability-app/pod.yaml
+++ b/demo-apps/observability-app/pod.yaml
@@ -22,4 +22,5 @@ spec:
       imagePullPolicy: "Always"
       #command: ["/bin/bash", "-ec", "while :; do echo '.'; sleep 5 ; done"]
   restartPolicy: Never
-  nodeName: worker1
+  nodeSelector:
+    kubernetes.io/hostname: worker1
