Add matrix multiplication. Add sorting algorithms. Enable logging. Add data store option to MySQL.

--- a/demo-apps/observability-app/flask/Dockerfile
+++ b/demo-apps/observability-app/flask/Dockerfile
@@ -1,12 +1,12 @@
 FROM python:3.8-slim
 
 #ENV FLASK_APP=app.py
-ENV FLASK_ENV=development
+#ENV FLASK_ENV=development
 ENV FLASK_DEBUG=0
 
 ARG Pathdir="/app"
 
-RUN apt -y update && apt -y install --no-install-recommends stress curl vim
+RUN apt -y update && apt -y install --no-install-recommends build-essential stress curl vim default-libmysqlclient-dev
 RUN mkdir $Pathdir
 
 COPY requirements.txt .
