--- a/demo-apps/observability-app/flask/requirements.txt
+++ b/demo-apps/observability-app/flask/requirements.txt
@@ -1,7 +1,10 @@
+mysqlclient
 flask
+flask-mysqldb
 waitress
 opentelemetry-distro
 opentelemetry-instrumentation
 opentelemetry-exporter-jaeger
 opentelemetry-exporter-jaeger-proto-grpc
 protobuf==3.20.*
+numpy
