--- a/demo-apps/observability-app/flask/flask.yaml
+++ b/demo-apps/observability-app/flask/flask.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: demo-flask-svc
-  namespace: uc1
+  namespace: uc3
   labels:
     app: demo-flask-svc
 spec:
@@ -20,7 +20,7 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: demo-flask-app
-  namespace: uc1
+  namespace: uc3
   labels:
     app: flask-app
 spec:
@@ -36,18 +36,38 @@ spec:
       containers:
         - name: demo-flask-app
           image: usman476/demo-flask-app:latest
-          #command: [ "python3" ]
-          #args: [ "app.py" ]
-          command: [ "flask" ]
-          args: [ "run", "-h", "0.0.0.0", "-p", "5000" ]
+          env:
+            - name: STRESS_APP
+              value: "false"
+            - name: STRESS_CPU
+              value: "1"
+            - name: STRESS_VM
+              value: "1"
+            - name: STRESS_VM_BYTES
+              value: "150M"
+            - name: STRESS_HDD
+              value: "1"
+            - name: STRESS_IO
+              value: "4"
+            - name: STRESS_TIMEOUT
+              value: "120s"
+            - name: IDLE_TIMEOUT
+              value: "60"
+            - name: STRESS_INIT_DELAY
+              value: "60"
+
+          command: [ "python3" ]
+          args: [ "app.py" ]
+          #command: [ "flask" ]
+          #args: [ "run", "-h", "0.0.0.0", "-p", "5000" ]
           #command: [ "opentelemetry-instrument" ]
           #args: [ "--traces_exporter", "jaeger_thrift", "flask", "run" ]
           resources:
             requests:
-              memory: "128Mi"
+              memory: "100Mi"
               cpu: "100m"
             limits:
-              memory: "256Mi"
+              memory: "200Mi"
               cpu: "200m"
           imagePullPolicy: "Always"
       restartPolicy: Always
