--- a/tools-helm-configs/promtail-values.yaml
+++ b/tools-helm-configs/promtail-values.yaml
@@ -247,7 +247,7 @@ config:
   # Must be reference in `config.file` to configure `clients`
   # @default -- See `values.yaml`
   clients:
-    - url: http://loki-0.loki-headless.observability.svc.cluster.local:3100/loki/api/v1/push
+    - url: http://loki-headless.observability.svc.cluster.local:3100/loki/api/v1/push
   # -- A section of reusable snippets that can be reference in `config.file`.
   # Custom snippets may be added in order to reduce redundancy.
   # This is especially helpful when multiple `kubernetes_sd_configs` are use which usually have large parts in common.
